--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
+
 body {
     padding:0;
     margin:0;
@@ -5,7 +7,15 @@ body {
     height:100vh;
     overflow:hidden;
 }
-.Content {
+:root {
+    --c-red:rgb(255, 44, 108);
+    --c-blue:rgb(44, 171, 255);
+}
+* {
+    font-family: 'Poppins', sans-serif;
+    margin:0;
+}
+.DotCenterer {
     display:flex;
     justify-content:center;
     align-items:center;
@@ -13,12 +23,12 @@ body {
     height:100%;
 }
 .rhythmDot {
-    --color:rgb(255, 44, 108);
+    --color:var(--c-red);
     width:15vh;
     height:15vh;
     background-color:white;
     border-radius:1000px;
-    margin:10px;
+    margin:1vh;
     transform:scale(1);
     transition:0.2s transform;
     transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
@@ -54,4 +64,29 @@ body {
     transform:scale(1.5) translateZ(-1px);
     opacity:0;
     transition:0.2s;
+}
+.ResourceCounters {
+    position:absolute;
+    top:20px;
+    left:20px;
+    font-size:2em;
+}
+.Resource {
+    display:flex;
+    align-items:center;
+    margin:10px 0;
+}
+.Resource .icon {
+    --color:var(--c-red);
+    width:50px;
+    height:50px;
+    background-color:var(--color);
+    margin-right:10px;
+    border-radius:500px;
+}
+.CanvasContainer {
+    position:absolute;
+    left:0;
+    top:0;
+    z-index:1000;
 }
